syntax = "proto3";
package core.dex;

option go_package = "coregithub.com/QuadrateOrg/core/x/dex/types";
import "gogoproto/gogo.proto";
import "core/dex/pair_id.proto";

message DepositRecord {
  PairID pairID = 1;
  string sharesOwned = 2 [
                          (gogoproto.moretags)   = "yaml:\"totalShares\"",
                          (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
                          (gogoproto.nullable)   = false,
                          (gogoproto.jsontag) = "totalShares"
                          ];
  int64 centerTickIndex = 3;
  int64 lowerTickIndex = 4;
  int64 upperTickIndex = 5;
  uint64 fee = 6;
}
