syntax = "proto3";
package core.dex;

option go_package = "coregithub.com/QuadrateOrg/core/x/dex/types";

import "core/dex/pair_id.proto";

message PoolMetadata {
  uint64 ID = 1;
  int64 tick = 2;
  uint64 fee = 3;
  PairID pairID = 4;
}
